# get-physics-done-test

./: .gitignore  AGENTS.md  Makefile  PLAN.md  PLAN_3_23_2026_9_58.md  PLAN_3_23_2026_9_58.md:Zone.Identifier  README.md  pyproject.toml  run_config.yaml  security_best_practices_report.md
.codex/: config.toml  gpd-file-manifest.json
.codex/agents/: gpd-bibliographer.md  gpd-bibliographer.toml  gpd-consistency-checker.md  gpd-consistency-checker.toml  gpd-debugger.md  gpd-debugger.toml  gpd-executor.md  gpd-executor.toml  gpd-experiment-designer.md  gpd-experiment-designer.toml  gpd-explainer.md  gpd-explainer.toml  gpd-literature-reviewer.md  gpd-literature-reviewer.toml  gpd-notation-coordinator.md  gpd-notation-coordinator.toml  gpd-paper-writer.md  gpd-paper-writer.toml  gpd-phase-researcher.md  gpd-phase-researcher.toml  gpd-plan-checker.md  gpd-plan-checker.toml  gpd-planner.md  gpd-planner.toml  gpd-project-researcher.md  gpd-project-researcher.toml  gpd-referee.md  gpd-referee.toml  gpd-research-mapper.md  gpd-research-mapper.toml  gpd-research-synthesizer.md  gpd-research-synthesizer.toml  gpd-review-literature.md  gpd-review-literature.toml  gpd-review-math.md  gpd-review-math.toml  gpd-review-physics.md  gpd-review-physics.toml  gpd-review-reader.md  (+7 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.gpd/: CONVENTIONS.md  DECISIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
dev/: collect_pr_context.sh  ship.sh
docs/: architecture.md
tests/: test_check_env.py  test_cli.py  test_security_tools.py  test_simulation_architecture.py
(+208 files in other folders)
