[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "get-physics-done-test"
version = "0.1.0"
description = "Public repo tracking Codex + GPD experience on fusion-plasma research workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "jinja2>=3.1",
]

[project.scripts]
gpd-test = "src.gpd_test.cli:main"
gpd-test-recover = "src.scripts.check_env:recover_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
